added target to delete english
Former-commit-id: b7fce577373ec6630216c21c1fb79d89e9e5218d